# eldenring-practice-tool

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  TESTS.md  TROUBLESHOOTING.md  jdsd_er_practice_tool.toml  rustfmt.toml
.cargo/: config  config.toml
.github/workflows/: build.yml  nightly.yml  release.yml  test.yml
lib/data/: RELEASE-GH.txt  RELEASE-README.txt
lib/libeldenring/: Cargo.toml
lib/libeldenring/src/: addresses.rs  base_addresses.rs  lib.rs  memedit.rs  params.rs  pointers.rs  version.rs
lib/libeldenring/src/codegen/: base_addresses.rs  mod.rs  param_data.rs  param_names.json
lib/macro-param/: Cargo.toml
lib/macro-param/examples/: example.rs
lib/macro-param/src/: lib.rs
lib/no-logo/: Cargo.toml  build.rs  exports.def
lib/no-logo/src/: lib.rs
lib/param-tinkerer/: Cargo.toml
lib/param-tinkerer/src/: lib.rs  main.rs
lib/scripts/: Cargo.toml
practice-tool/: Cargo.toml  build.rs  jdsd_er_practice_tool.toml
practice-tool-launcher/: Cargo.toml  build.rs
practice-tool-launcher/src/: injector.rs  main.rs
practice-tool/src/: config.rs  install.rs  lib.rs  main.rs  practice_tool.rs  resources.rc  update.rs  util.rs
practice-tool/src/util/: mod.rs  vk.rs
practice-tool/src/widgets/: action_freeze.rs  character_stats.rs  cycle_color.rs  cycle_speed.rs  deathcam.rs  flag.rs  group.rs  item_ids.json  item_ids.rs  item_spawn.rs  label.rs  mod.rs  multiflag.rs  nudge_pos.rs  position.rs  quitout.rs  runes.rs  savefile_manager.rs  target.rs  warp.rs
xtask/: .gitignore  Cargo.toml  patch_runner.pyw
xtask/src/: dist.rs  main.rs
xtask/src/codegen/: aob_scans.rs  find_torrent.py  item_ids.rs  item_ids.yml  mod.rs  params.py  params.rs
