[workspace]
resolver = "2"
members = [
  "practice-tool",
  "lib/libeldenring",
  "lib/param-tinkerer",
  "lib/no-logo",
  "xtask",
]
exclude = [
  "lib/hudhook"
]

[profile.release]
strip = "symbols"
lto = true

[profile.fastdev]
inherits = "release"
debug = true
strip = "none"

[workspace.dependencies]
# hudhook = { git = "https://github.com/veeenu/hudhook" }
hudhook = { path = "../hudhook" }
imgui = "0.11.0"
imgui-sys = "0.11.0"
