[workspace]
resolver = "2"
members = [
  "practice-tool",
  "lib/libeldenring",
  "lib/param-tinkerer",
  "lib/no-logo",
  "xtask",
]

[workspace.package]
version = "1.6.0"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[profile.release]
strip = "symbols"
lto = true

[profile.fastdev]
inherits = "release"
debug = true
strip = "none"

[workspace.dependencies]
hudhook = { git = "https://github.com/veeenu/hudhook" }
imgui = "0.11.0"
imgui-sys = "0.11.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
practice-tool-core = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }

[workspace.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_Foundation",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader"
]

# [patch.'https://github.com/veeenu/hudhook']
# hudhook = { path = "../hudhook" }
