[workspace]
resolver = "2"
members = [
  "practice-tool",
  "lib/libeldenring",
  "lib/param-tinkerer",
  "lib/no-logo",
  "lib/scripts",
  "xtask", 
]

[workspace.package]
version = "1.9.4"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[profile.release]
strip = "symbols"
lto = true

[profile.fastdev]
inherits = "release"
debug = true
strip = "none"

[workspace.dependencies]
imgui = "0.12.0"
imgui-sys = "0.12.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
hudhook = { version = "0.7.0", features = ["dx12", "inject"], default-features = false }
practice-tool-core = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }
practice-tool-tasks = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }

[workspace.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_Foundation",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input_XboxController",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
]

[patch.'crates-io']
# hudhook = { path = "../hudhook" }
# Necessary workaround for the slice::from_raw_parts panic (see https://github.com/imgui-rs/imgui-rs/commit/1d06e2c049352e2d5d1e5877204f69d28148be2f)
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "1d06e2c049352e2d5d1e5877204f69d28148be2f" }
imgui-sys = { git = "https://github.com/imgui-rs/imgui-rs", rev = "1d06e2c049352e2d5d1e5877204f69d28148be2f" }

[patch.'https://github.com/veeenu/practice-tool-core']
# practice-tool-core = { path = "../practice-tool-core" }
# practice-tool-tasks = { path = "../practice-tool-core/tasks" }
