[package]
name = "eldenring-practice-tool"
version = "1.4.1"
edition = "2021"
authors = ["Andrea Venuta <andrea@johndisandonato.stream>"]

[[bin]]
name = "jdsd_er_practice_tool"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libjdsd_er_practice_tool"

[dependencies]
anyhow = "1.0.79"
const_format = "0.2.23"
fuzzy_match = "0.2.1"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
open = "2.1.1"
parking_lot = "0.12.0"
pkg-version = "1.0.0"
regex = "1.5.5"
semver = "1.0.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_path_to_error = "0.1.7"
serde_yaml = "0.8.23"
textwrap-macros = "0.3.0"
toml = "0.5.8"
tracing-subscriber = "0.3.16"
ureq = { version = "2.4.0", features = ["json"] }

libeldenring = { path = "../lib/libeldenring" }

hudhook.workspace = true
imgui.workspace = true
once_cell.workspace = true
windows.workspace = true
practice-tool-core.workspace = true
