[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
widestring = "0.5.1"
zip = "0.5.13"
regex = "1.5.4"
serde_json = "1.0.73"
rayon = "1.5.1"
log = "0.4.16"
dotenv = "0.15.0"
textwrap = "0.15.0"
heck = "0.4.0"
serde_yaml = "0.8.23"
serde = { version = "1.0.136", features = ["derive"] }
# hudhook = { path = "../lib/hudhook/hudhook" }
simplelog = "0.12.0"
dll-syringe = "0.11.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.9"
features = [
  "winuser",
  "winbase",
  "ntdef",
]

[dependencies.windows]
version = "0.34.0"
features = [
  "Win32_Foundation",
  "Win32_Security", 
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug", 
  "Win32_System_Diagnostics_ToolHelp", 
  "Win32_System_Threading", 
]
