[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
heck = "0.4.0"
pelite = "0.10.0"
rayon = "1.5.3"
regex = "1.5.5"
serde_json = "1.0.73"
serde_yaml = "0.9.32"
textwrap = "0.15.0"
widestring = "0.5.1"
zip = "0.6"

once_cell.workspace = true
practice-tool-tasks.workspace = true
