[package]
name = "libeldenring"
version = "0.1.0"
edition = "2021"

[dependencies]
macro-param = { path = "../macro-param" }
log = "0.4.16"
widestring = "0.5.1"
serde = "1.0.136"
serde_json = "1.0.79"
parking_lot = "0.12.0"

[dependencies.windows]
version = "0.34.0"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
]
