[package]
name = "no-logo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "dinput8"
 
[dependencies]
libeldenring = { path = "../libeldenring" }
u16cstr = "0.3.0"
widestring = "0.5.1"
once_cell.workspace = true

[dependencies.windows]
version = "0.39.0"
features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader", 
  "Win32_System_Memory",
  "Win32_System_SystemInformation", 
  "Win32_System_SystemServices", 
  "Win32_UI_WindowsAndMessaging",
]
