[package]
name = "param-tinkerer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jdsd_er_param_tinkerer"

[dependencies]
imgui = { workspace = true }
imgui-sys = { workspace = true }
libeldenring = { path = "../libeldenring" }
hudhook = { workspace = true }
tracing-subscriber = "0.3.16"

[dependencies.windows]
version = "0.39.0"
features = ["Win32_System_LibraryLoader", "Win32_Foundation"]

