[package]
name = "param-tinkerer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jdsd_er_param_tinkerer"

[dependencies]
imgui.workspace = true
imgui-sys.workspace = true
libeldenring = { path = "../libeldenring" }
hudhook.workspace = true
windows.workspace = true
tracing-subscriber = "0.3.16"

